# securechain-wallet

./: .gitignore  COPYING  LICENSE  Makefile.am  README.md  compile-db.sh  compile-src.sh  configure.ac  release-notes.md  securechain-wallet.pro  securechain-wallet.pro.user.06c24e4
doc/: build-unix.md  release-notes.md  release-process.md
share/: setup.nsi  setup.nsi.in
share/qt/: Info.plist  Info.plist.in
src/: Makefile.am  addrman.cpp  alert.cpp  amount.cpp  amount.h  base58.cpp  base58.h  bitcoin-cli-res.rc  bitcoin-cli.cpp  bitcoin-tx.cpp  bitcoind-res.rc  bitcoind.cpp  bitcoinrpc.cpp  blake.c  bloom.cpp  bloom.h  bmw.c  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  chainparamsseeds.h  checkpoints.cpp  clientversion.cpp  clientversion.h  coins.h  core.cpp  core.h  db.cpp  groestl.c  hash.h  init.cpp  jh.c  keccak.c  key.cpp  key.h  main.cpp  main.h  makefile.mingw  makefile.osx  (+25 more)
src/json/: json_spirit_writer_template.h
src/leveldb/: INSTALL  Makefile  Note  build_detect_platform
src/qt/: Makefile.am  aboutdialog.cpp  addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  askpassphrasedialog.cpp  bitcoin.cpp  bitcoin.qrc  bitcoinaddressvalidator.cpp  bitcoinamountfield.cpp  bitcoingui.cpp  bitcoinstrings.cpp  bitcoinunits.cpp  bitcoinunits.h  coincontroldialog.cpp  editaddressdialog.cpp  editaddressdialog.h  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  macdockiconhandler.mm  notificator.cpp  notificator.h  optionsdialog.cpp  optionsmodel.cpp  overviewpage.cpp  (+17 more)
src/qt/test/: Makefile.am  test_main.cpp  uritests.cpp
(+36 files in other folders)
